backporting for UI: Fix text overflow for long Secret and Auth names (#29430)
* adding overflow class to link text

* adding separate class to fix overflow text on list & card views

* adding class to search list items to handle overflow

* adding ellipsis instead of just hidden for visual indicator

* added changelog

* updating styling to use helper classes, added child class to global style, updated changelog

* added test checks for oveflow classes

--- a/ui/app/styles/helper-classes/flexbox-and-grid.scss
+++ b/ui/app/styles/helper-classes/flexbox-and-grid.scss
@@ -192,3 +192,7 @@
 .align-self-end {
   align-self: end;
 }
+
+.align-items-center {
+  align-items: center;
+}
